@@ -2,169 +2,126 @@ package com.sprint.mission.discodeit.repository.file;
 
 import com.sprint.mission.discodeit.entity.User;
 import com.sprint.mission.discodeit.repository.UserRepository;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.stereotype.Repository;
 
-import java.time.Instant;
-
-import java.util.UUID;
-import java.util.List;
-import java.util.ArrayList;
+import java.io.*;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.io.*;
+import java.nio.file.Paths;
+import java.util.List;
+import java.util.Optional;
+import java.util.UUID;
+import java.util.stream.Stream;
 
-
+@ConditionalOnProperty(name = "discodeit.repository.type", havingValue = "file")
+@Repository
 public class FileUserRepository implements UserRepository {
-    // =========================
-    // [추가] 저장 파일 경로
-    // =========================
-    private final Path filePath;
+    private final Path DIRECTORY;
+    private final String EXTENSION = ".ser";
 
-    public FileUserRepository(String fileDirectory) {
-        // =========================
-        // [추가] 파일이 없으면 자동 생성
-        // =========================
-        this.filePath = Path.of(fileDirectory, "users.txt");
-
-        try {
-            // getParent(): user.txt의 "상위 폴더" 경로 (.discodeit 같은 폴더)
-            Path parentDir = filePath.getParent();
-
-            // Files.exists(경로): 파일/폴더가 실제로 존재하는지 확인
-            if (parentDir != null && !Files.exists(parentDir)) {
-                // createDirectories: 중간 폴더까지 전부 만들어줌
-                Files.createDirectories(parentDir);
+    public FileUserRepository(
+            @Value("${discodeit.repository.file-directory:data}") String fileDirectory
+    ) {
+        this.DIRECTORY = Paths.get(System.getProperty("user.dir"), fileDirectory, User.class.getSimpleName());
+        if (Files.notExists(DIRECTORY)) {
+            try {
+                Files.createDirectories(DIRECTORY);
+            } catch (IOException e) {
+                throw new RuntimeException(e);
             }
+        }
+    }
 
-            if (!Files.exists(filePath)) {
-                // createFile: 파일 생성
-                Files.createFile(filePath);
-            }
+    private Path resolvePath(UUID id) {
+        return DIRECTORY.resolve(id + EXTENSION);
+    }
+
+    @Override
+    public User save(User user) {
+        Path path = resolvePath(user.getId());
+        try (
+                FileOutputStream fos = new FileOutputStream(path.toFile());
+                ObjectOutputStream oos = new ObjectOutputStream(fos)
+        ) {
+            oos.writeObject(user);
         } catch (IOException e) {
-            throw new RuntimeException("유저 파일 생성 실패", e);
+            throw new RuntimeException(e);
+        }
+        return user;
+    }
+
+    @Override
+    public Optional<User> findById(UUID id) {
+        User userNullable = null;
+        Path path = resolvePath(id);
+        if (Files.exists(path)) {
+            try (
+                    FileInputStream fis = new FileInputStream(path.toFile());
+                    ObjectInputStream ois = new ObjectInputStream(fis)
+            ) {
+                userNullable = (User) ois.readObject();
+            } catch (IOException | ClassNotFoundException e) {
+                throw new RuntimeException(e);
+            }
+        }
+        return Optional.ofNullable(userNullable);
+    }
+
+    @Override
+    public Optional<User> findByUsername(String username) {
+        return this.findAll().stream()
+                .filter(user -> user.getUsername().equals(username))
+                .findFirst();
+    }
+
+    @Override
+    public List<User> findAll() {
+        try (Stream<Path> paths = Files.list(DIRECTORY)) {
+            return paths
+                    .filter(path -> path.toString().endsWith(EXTENSION))
+                    .map(path -> {
+                        try (
+                                FileInputStream fis = new FileInputStream(path.toFile());
+                                ObjectInputStream ois = new ObjectInputStream(fis)
+                        ) {
+                            return (User) ois.readObject();
+                        } catch (IOException | ClassNotFoundException e) {
+                            throw new RuntimeException(e);
+                        }
+                    })
+                    .toList();
+        } catch (IOException e) {
+            throw new RuntimeException(e);
         }
     }
 
-    public FileUserRepository() {
-        // 혹시 다른 곳에서 new FileUserRepository()를 쓰고 있어도 깨지지 않게 유지
-        // .discodeit는 AppConfig의 기본값과 동일한 의미로 맞춰줌 :contentReference[oaicite:7]{index=7}
-        this(".discodeit");
+    @Override
+    public boolean existsById(UUID id) {
+        Path path = resolvePath(id);
+        return Files.exists(path);
     }
 
-// =========================
-// [추가] 전체 파일 읽기 → List<User>
-// =========================
-private List<User> loadAll() {
-    List<User> users = new ArrayList<>();
-
-    try (BufferedReader reader = new BufferedReader(new FileReader(filePath.toFile()))) {
-        String line;
-
-        while ((line = reader.readLine()) != null) {
-            String[] parts = line.split("\\|");
-            users.add(new User(
-                    UUID.fromString(parts[0]),          // id
-                    java.time.Instant.parse(parts[1]).toEpochMilli(),           // createdAt
-                    java.time.Instant.parse(parts[2]).toEpochMilli(),           // updatedAt
-                    parts[3],                           // loginId
-                    parts[4],                           // password
-                    parts[5],                           // username
-                    parts[6],                           // phoneNumber
-                    parts[7]                            // nickname
-            ));
-        }
-    } catch (IOException e) {
-        throw new RuntimeException("유저 파일 읽기 실패", e);
-    }
-    return users;
-}
-
-// =========================
-// [추가] 전체 덮어쓰기
-// =========================
-private void saveAll(List<User> users) {
-    try (BufferedWriter writer = new BufferedWriter(new FileWriter(filePath.toFile()))) {
-        for (User user : users) {
-            writer.write(toLine(user));
-            writer.newLine();
-        }
-    } catch (IOException e) {
-        throw new RuntimeException("유저 파일 저장 실패", e);
-    }
-}
-// =========================
-// [추가] User → 파일 한 줄 변환
-// =========================
-private String toLine(User user) {
-    return String.join("|",
-            user.getId().toString(),
-            String.valueOf(user.getCreatedAt()),
-            String.valueOf(user.getUpdatedAt()),
-            user.getLoginId(),
-            user.getPassword(),
-            user.getUsername(),
-            user.getPhoneNumber(),
-            user.getNickname()
-    );
-}
-
-// =========================
-// Repository 구현부
-// =========================
-
-@Override
-public void create(User user) {
-    List<User> users = loadAll();
-    users.add(user);
-    saveAll(users);
-}
-
-@Override
-public User findById(UUID id) {
-    return loadAll().stream()
-            .filter(u -> u.getId().equals(id))
-            .findFirst()
-            .orElse(null);
-}
-
-@Override
-public List<User> findAll() {
-    return loadAll();
-}
-
-@Override
-public boolean update(UUID id, String nickname, String phoneNumber, String password) {
-    List<User> users = loadAll();
-
-    for (User user : users) {
-        if (user.getId().equals(id)) {
-            // ❗ setter 금지, update()만 사용
-            user.update(nickname, phoneNumber, password);
-            saveAll(users);
-            return true;
+    @Override
+    public void deleteById(UUID id) {
+        Path path = resolvePath(id);
+        try {
+            Files.delete(path);
+        } catch (IOException e) {
+            throw new RuntimeException(e);
         }
     }
-    return false;
-}
 
-@Override
-public boolean delete(UUID id) {
-    List<User> users = loadAll();
-    boolean removed = users.removeIf(u -> u.getId().equals(id));
-    if (removed) {
-        saveAll(users);
+    @Override
+    public boolean existsByEmail(String email) {
+        return this.findAll().stream()
+                .anyMatch(user -> user.getEmail().equals(email));
     }
-    return removed;
-}
-    private Instant parseInstant(String raw) {
-        if (raw == null || raw.isBlank()) return null;
 
-        // 1) 숫자면 epochMilli로 처리
-        if (raw.chars().allMatch(Character::isDigit)) {
-            return Instant.ofEpochMilli(Long.parseLong(raw));
-        }
-
-        // 2) 아니면 Instant 문자열로 처리 (예: 2026-01-28T15:20:04.043348300Z)
-        return Instant.parse(raw);
+    @Override
+    public boolean existsByUsername(String username) {
+        return this.findAll().stream()
+                .anyMatch(user -> user.getUsername().equals(username));
     }
 }
